--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "predis/predis": "^1.1",
         "spatie/laravel-googletagmanager": "^2.6",
-        "stripe/stripe-php": "^7.121"
+        "stripe/stripe-php": "^7.121",
+        "symfony/http-client": "^6.0",
+        "symfony/mailgun-mailer": "^6.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
